--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemailer": "^6.9.14"
+    "mongoose": "^8.8.3",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.7",
     "@types/nodemailer": "^6.4.15",
     "nodemon": "^3.1.0",
